--- a/autom4te.cache/traces.2
+++ b/autom4te.cache/traces.2
@@ -3351,7 +3351,7 @@ m4trace:configure.ac:52: -1- _LT_COMPILER_OPTION([if $compiler PIC flag $_LT_TAG
      _LT_TAGVAR(lt_prog_compiler_can_build_shared, CXX)=no])
 m4trace:configure.ac:52: -1- _LT_LINKER_OPTION([if $compiler static flag $lt_tmp_static_flag works], [lt_cv_prog_compiler_static_works_CXX], [$lt_tmp_static_flag], [], [_LT_TAGVAR(lt_prog_compiler_static, CXX)=])
 m4trace:configure.ac:52: -1- m4_pattern_allow([^LT_SYS_LIBRARY_PATH$])
-m4trace:configure.ac:58: -1- PKG_CHECK_MODULES([GROWBOOK], [gtkmm-3.0 >= 3.24 libxml++-2.6])
+m4trace:configure.ac:58: -1- PKG_CHECK_MODULES([GROWBOOK], [gtkmm-3.0 >= 3.24])
 m4trace:configure.ac:58: -1- PKG_PROG_PKG_CONFIG
 m4trace:configure.ac:58: -1- m4_pattern_forbid([^_?PKG_[A-Z_]+$])
 m4trace:configure.ac:58: -1- m4_pattern_allow([^PKG_CONFIG(_(PATH|LIBDIR|SYSROOT_DIR|ALLOW_SYSTEM_(CFLAGS|LIBS)))?$])
@@ -3362,9 +3362,9 @@ m4trace:configure.ac:58: -1- m4_pattern_allow([^PKG_CONFIG_LIBDIR$])
 m4trace:configure.ac:58: -1- m4_pattern_allow([^PKG_CONFIG$])
 m4trace:configure.ac:58: -1- m4_pattern_allow([^GROWBOOK_CFLAGS$])
 m4trace:configure.ac:58: -1- m4_pattern_allow([^GROWBOOK_LIBS$])
-m4trace:configure.ac:58: -1- PKG_CHECK_EXISTS([gtkmm-3.0 >= 3.24 libxml++-2.6], [pkg_cv_[]GROWBOOK_CFLAGS=`$PKG_CONFIG --[]cflags "gtkmm-3.0 >= 3.24 libxml++-2.6" 2>/dev/null`
+m4trace:configure.ac:58: -1- PKG_CHECK_EXISTS([gtkmm-3.0 >= 3.24], [pkg_cv_[]GROWBOOK_CFLAGS=`$PKG_CONFIG --[]cflags "gtkmm-3.0 >= 3.24" 2>/dev/null`
 		      test "x$?" != "x0" && pkg_failed=yes ], [pkg_failed=yes])
-m4trace:configure.ac:58: -1- PKG_CHECK_EXISTS([gtkmm-3.0 >= 3.24 libxml++-2.6], [pkg_cv_[]GROWBOOK_LIBS=`$PKG_CONFIG --[]libs "gtkmm-3.0 >= 3.24 libxml++-2.6" 2>/dev/null`
+m4trace:configure.ac:58: -1- PKG_CHECK_EXISTS([gtkmm-3.0 >= 3.24], [pkg_cv_[]GROWBOOK_LIBS=`$PKG_CONFIG --[]libs "gtkmm-3.0 >= 3.24" 2>/dev/null`
 		      test "x$?" != "x0" && pkg_failed=yes ], [pkg_failed=yes])
 m4trace:configure.ac:58: -1- _PKG_SHORT_ERRORS_SUPPORTED
 m4trace:configure.ac:59: -1- m4_pattern_allow([^HAVE_SQLITE3_H$])
