--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -1,6 +1,6 @@
-m4trace:aclocal.m4:10719: -1- AC_SUBST([am__quote])
-m4trace:aclocal.m4:10719: -1- AC_SUBST_TRACE([am__quote])
-m4trace:aclocal.m4:10719: -1- m4_pattern_allow([^am__quote$])
+m4trace:aclocal.m4:10547: -1- AC_SUBST([am__quote])
+m4trace:aclocal.m4:10547: -1- AC_SUBST_TRACE([am__quote])
+m4trace:aclocal.m4:10547: -1- m4_pattern_allow([^am__quote$])
 m4trace:configure.ac:4: -1- AC_INIT([growbook], [0.1.4])
 m4trace:configure.ac:4: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:4: -1- m4_pattern_forbid([_AC_])
@@ -155,7 +155,7 @@ m4trace:configure.ac:4: -1- m4_pattern_allow([^target_alias$])
 m4trace:configure.ac:6: -1- AC_CONFIG_HEADERS([config.h])
 m4trace:configure.ac:8: -1- AM_INIT_AUTOMAKE([1.11])
 m4trace:configure.ac:8: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.ac:8: -1- AM_AUTOMAKE_VERSION([1.16.1])
+m4trace:configure.ac:8: -1- AM_AUTOMAKE_VERSION([1.16.3])
 m4trace:configure.ac:8: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:8: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.ac:8: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -333,134 +333,6 @@ m4trace:configure.ac:12: -1- AC_SUBST_TRACE([am__fastdepCXX_FALSE])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^am__fastdepCXX_FALSE$])
 m4trace:configure.ac:12: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_TRUE])
 m4trace:configure.ac:12: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_FALSE])
-m4trace:configure.ac:18: -1- AM_NLS
-m4trace:configure.ac:18: -1- AC_SUBST([USE_NLS])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([USE_NLS])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^USE_NLS$])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_UPDATE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_UPDATE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_UPDATE$])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_MERGE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_MERGE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_MERGE$])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_EXTRACT])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_EXTRACT])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_EXTRACT$])
-m4trace:configure.ac:18: -1- AC_SUBST([AM_DEFAULT_VERBOSITY])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([AM_DEFAULT_VERBOSITY])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^AM_DEFAULT_VERBOSITY$])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_V_MERGE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_V_MERGE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_V_MERGE$])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL__v_MERGE_])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL__v_MERGE_])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL__v_MERGE_$])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL__v_MERGE_0])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL__v_MERGE_0])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL__v_MERGE_0$])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_V_MERGE_OPTIONS])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_V_MERGE_OPTIONS])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_V_MERGE_OPTIONS$])
-m4trace:configure.ac:18: -1- AC_SUBST([intltool__v_merge_options_])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([intltool__v_merge_options_])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^intltool__v_merge_options_$])
-m4trace:configure.ac:18: -1- AC_SUBST([intltool__v_merge_options_0])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([intltool__v_merge_options_0])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^intltool__v_merge_options_0$])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_DESKTOP_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_DESKTOP_RULE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_DESKTOP_RULE$])
-m4trace:configure.ac:18: -1- _AM_SUBST_NOTMAKE([INTLTOOL_DESKTOP_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_DIRECTORY_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_DIRECTORY_RULE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_DIRECTORY_RULE$])
-m4trace:configure.ac:18: -1- _AM_SUBST_NOTMAKE([INTLTOOL_DIRECTORY_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_KEYS_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_KEYS_RULE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_KEYS_RULE$])
-m4trace:configure.ac:18: -1- _AM_SUBST_NOTMAKE([INTLTOOL_KEYS_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_PROP_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_PROP_RULE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_PROP_RULE$])
-m4trace:configure.ac:18: -1- _AM_SUBST_NOTMAKE([INTLTOOL_PROP_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_OAF_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_OAF_RULE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_OAF_RULE$])
-m4trace:configure.ac:18: -1- _AM_SUBST_NOTMAKE([INTLTOOL_OAF_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_PONG_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_PONG_RULE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_PONG_RULE$])
-m4trace:configure.ac:18: -1- _AM_SUBST_NOTMAKE([INTLTOOL_PONG_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_SERVER_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_SERVER_RULE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_SERVER_RULE$])
-m4trace:configure.ac:18: -1- _AM_SUBST_NOTMAKE([INTLTOOL_SERVER_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_SHEET_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_SHEET_RULE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_SHEET_RULE$])
-m4trace:configure.ac:18: -1- _AM_SUBST_NOTMAKE([INTLTOOL_SHEET_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_SOUNDLIST_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_SOUNDLIST_RULE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_SOUNDLIST_RULE$])
-m4trace:configure.ac:18: -1- _AM_SUBST_NOTMAKE([INTLTOOL_SOUNDLIST_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_UI_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_UI_RULE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_UI_RULE$])
-m4trace:configure.ac:18: -1- _AM_SUBST_NOTMAKE([INTLTOOL_UI_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_XAM_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_XAM_RULE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_XAM_RULE$])
-m4trace:configure.ac:18: -1- _AM_SUBST_NOTMAKE([INTLTOOL_XAM_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_KBD_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_KBD_RULE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_KBD_RULE$])
-m4trace:configure.ac:18: -1- _AM_SUBST_NOTMAKE([INTLTOOL_KBD_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_XML_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_XML_RULE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_XML_RULE$])
-m4trace:configure.ac:18: -1- _AM_SUBST_NOTMAKE([INTLTOOL_XML_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_XML_NOMERGE_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_XML_NOMERGE_RULE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_XML_NOMERGE_RULE$])
-m4trace:configure.ac:18: -1- _AM_SUBST_NOTMAKE([INTLTOOL_XML_NOMERGE_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_CAVES_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_CAVES_RULE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_CAVES_RULE$])
-m4trace:configure.ac:18: -1- _AM_SUBST_NOTMAKE([INTLTOOL_CAVES_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_SCHEMAS_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_SCHEMAS_RULE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_SCHEMAS_RULE$])
-m4trace:configure.ac:18: -1- _AM_SUBST_NOTMAKE([INTLTOOL_SCHEMAS_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_THEME_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_THEME_RULE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_THEME_RULE$])
-m4trace:configure.ac:18: -1- _AM_SUBST_NOTMAKE([INTLTOOL_THEME_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_SERVICE_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_SERVICE_RULE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_SERVICE_RULE$])
-m4trace:configure.ac:18: -1- _AM_SUBST_NOTMAKE([INTLTOOL_SERVICE_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_POLICY_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_POLICY_RULE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_POLICY_RULE$])
-m4trace:configure.ac:18: -1- _AM_SUBST_NOTMAKE([INTLTOOL_POLICY_RULE])
-m4trace:configure.ac:18: -1- AC_SUBST([XGETTEXT])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([XGETTEXT])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^XGETTEXT$])
-m4trace:configure.ac:18: -1- AC_SUBST([MSGMERGE])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([MSGMERGE])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^MSGMERGE$])
-m4trace:configure.ac:18: -1- AC_SUBST([MSGFMT])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([MSGFMT])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^MSGFMT$])
-m4trace:configure.ac:18: -1- AC_SUBST([GMSGFMT])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([GMSGFMT])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^GMSGFMT$])
-m4trace:configure.ac:18: -1- AC_SUBST([INTLTOOL_PERL])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([INTLTOOL_PERL])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^INTLTOOL_PERL$])
-m4trace:configure.ac:18: -1- AC_SUBST([ALL_LINGUAS])
-m4trace:configure.ac:18: -1- AC_SUBST_TRACE([ALL_LINGUAS])
-m4trace:configure.ac:18: -1- m4_pattern_allow([^ALL_LINGUAS$])
 m4trace:configure.ac:21: -1- AC_SUBST([GETTEXT_PACKAGE])
 m4trace:configure.ac:21: -1- AC_SUBST_TRACE([GETTEXT_PACKAGE])
 m4trace:configure.ac:21: -1- m4_pattern_allow([^GETTEXT_PACKAGE$])
@@ -502,6 +374,9 @@ m4trace:configure.ac:23: -1- m4_pattern_allow([^CC$])
 m4trace:configure.ac:23: -1- AC_SUBST([ac_ct_CC])
 m4trace:configure.ac:23: -1- AC_SUBST_TRACE([ac_ct_CC])
 m4trace:configure.ac:23: -1- m4_pattern_allow([^ac_ct_CC$])
+m4trace:configure.ac:23: -1- AC_SUBST([CC])
+m4trace:configure.ac:23: -1- AC_SUBST_TRACE([CC])
+m4trace:configure.ac:23: -1- m4_pattern_allow([^CC$])
 m4trace:configure.ac:23: -1- AC_REQUIRE_AUX_FILE([compile])
 m4trace:configure.ac:23: -1- AC_SUBST([CCDEPMODE], [depmode=$am_cv_CC_dependencies_compiler_type])
 m4trace:configure.ac:23: -1- AC_SUBST_TRACE([CCDEPMODE])
@@ -519,50 +394,38 @@ m4trace:configure.ac:23: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_TRUE])
 m4trace:configure.ac:23: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_FALSE])
 m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_LOCALE_H], [/* Define to 1 if you have the <locale.h> header file. */
 @%:@undef HAVE_LOCALE_H])
-m4trace:configure.ac:23: -1- AC_SUBST([CPP])
-m4trace:configure.ac:23: -1- AC_SUBST_TRACE([CPP])
-m4trace:configure.ac:23: -1- m4_pattern_allow([^CPP$])
-m4trace:configure.ac:23: -1- AC_SUBST([CPPFLAGS])
-m4trace:configure.ac:23: -1- AC_SUBST_TRACE([CPPFLAGS])
-m4trace:configure.ac:23: -1- m4_pattern_allow([^CPPFLAGS$])
-m4trace:configure.ac:23: -1- AC_SUBST([CPP])
-m4trace:configure.ac:23: -1- AC_SUBST_TRACE([CPP])
-m4trace:configure.ac:23: -1- m4_pattern_allow([^CPP$])
-m4trace:configure.ac:23: -1- AC_SUBST([GREP])
-m4trace:configure.ac:23: -1- AC_SUBST_TRACE([GREP])
-m4trace:configure.ac:23: -1- m4_pattern_allow([^GREP$])
-m4trace:configure.ac:23: -1- AC_SUBST([EGREP])
-m4trace:configure.ac:23: -1- AC_SUBST_TRACE([EGREP])
-m4trace:configure.ac:23: -1- m4_pattern_allow([^EGREP$])
-m4trace:configure.ac:23: -1- AC_DEFINE_TRACE_LITERAL([STDC_HEADERS])
-m4trace:configure.ac:23: -1- m4_pattern_allow([^STDC_HEADERS$])
-m4trace:configure.ac:23: -1- AH_OUTPUT([STDC_HEADERS], [/* Define to 1 if you have the ANSI C header files. */
-@%:@undef STDC_HEADERS])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_SYS_TYPES_H], [/* Define to 1 if you have the <sys/types.h> header file. */
-@%:@undef HAVE_SYS_TYPES_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_SYS_STAT_H], [/* Define to 1 if you have the <sys/stat.h> header file. */
-@%:@undef HAVE_SYS_STAT_H])
+m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_STDIO_H], [/* Define to 1 if you have the <stdio.h> header file. */
+@%:@undef HAVE_STDIO_H])
 m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_STDLIB_H], [/* Define to 1 if you have the <stdlib.h> header file. */
 @%:@undef HAVE_STDLIB_H])
 m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_STRING_H], [/* Define to 1 if you have the <string.h> header file. */
 @%:@undef HAVE_STRING_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_MEMORY_H], [/* Define to 1 if you have the <memory.h> header file. */
-@%:@undef HAVE_MEMORY_H])
-m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_STRINGS_H], [/* Define to 1 if you have the <strings.h> header file. */
-@%:@undef HAVE_STRINGS_H])
 m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_INTTYPES_H], [/* Define to 1 if you have the <inttypes.h> header file. */
 @%:@undef HAVE_INTTYPES_H])
 m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_STDINT_H], [/* Define to 1 if you have the <stdint.h> header file. */
 @%:@undef HAVE_STDINT_H])
+m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_STRINGS_H], [/* Define to 1 if you have the <strings.h> header file. */
+@%:@undef HAVE_STRINGS_H])
+m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_SYS_STAT_H], [/* Define to 1 if you have the <sys/stat.h> header file. */
+@%:@undef HAVE_SYS_STAT_H])
+m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_SYS_TYPES_H], [/* Define to 1 if you have the <sys/types.h> header file. */
+@%:@undef HAVE_SYS_TYPES_H])
 m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_UNISTD_H], [/* Define to 1 if you have the <unistd.h> header file. */
 @%:@undef HAVE_UNISTD_H])
+m4trace:configure.ac:23: -1- AC_DEFINE_TRACE_LITERAL([STDC_HEADERS])
+m4trace:configure.ac:23: -1- m4_pattern_allow([^STDC_HEADERS$])
+m4trace:configure.ac:23: -1- AH_OUTPUT([STDC_HEADERS], [/* Define to 1 if all of the C90 standard headers exist (not just the ones
+   required in a freestanding environment). This macro is provided for
+   backward compatibility; new code need not use it. */
+@%:@undef STDC_HEADERS])
 m4trace:configure.ac:23: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LOCALE_H])
 m4trace:configure.ac:23: -1- m4_pattern_allow([^HAVE_LOCALE_H$])
 m4trace:configure.ac:23: -1- _m4_warn([obsolete], [The macro `AC_TRY_LINK' is obsolete.
-You should run autoupdate.], [../../lib/autoconf/general.m4:2698: AC_TRY_LINK is expanded from...
-../../lib/m4sugar/m4sh.m4:639: AS_IF is expanded from...
-../../lib/autoconf/general.m4:2042: AC_CACHE_VAL is expanded from...
-../../lib/autoconf/general.m4:2063: AC_CACHE_CHECK is expanded from...
+You should run autoupdate.], [../autoconf-2.71/lib/autoconf/general.m4:2920: AC_TRY_LINK is expanded from...
+../autoconf-2.71/lib/m4sugar/m4sh.m4:692: _AS_IF_ELSE is expanded from...
+../autoconf-2.71/lib/m4sugar/m4sh.m4:699: AS_IF is expanded from...
+../autoconf-2.71/lib/autoconf/general.m4:2249: AC_CACHE_VAL is expanded from...
+../autoconf-2.71/lib/autoconf/general.m4:2270: AC_CACHE_CHECK is expanded from...
 aclocal.m4:73: GLIB_LC_MESSAGES is expanded from...
 aclocal.m4:388: GLIB_GNU_GETTEXT is expanded from...
 aclocal.m4:488: AM_GLIB_GNU_GETTEXT is expanded from...
@@ -588,25 +451,27 @@ m4trace:configure.ac:23: -1- AC_SUBST([INTL_MACOSX_LIBS])
 m4trace:configure.ac:23: -1- AC_SUBST_TRACE([INTL_MACOSX_LIBS])
 m4trace:configure.ac:23: -1- m4_pattern_allow([^INTL_MACOSX_LIBS$])
 m4trace:configure.ac:23: -1- _m4_warn([obsolete], [The macro `AC_TRY_LINK' is obsolete.
-You should run autoupdate.], [../../lib/autoconf/general.m4:2698: AC_TRY_LINK is expanded from...
-../../lib/m4sugar/m4sh.m4:639: AS_IF is expanded from...
-../../lib/autoconf/general.m4:2042: AC_CACHE_VAL is expanded from...
-../../lib/autoconf/general.m4:2063: AC_CACHE_CHECK is expanded from...
-../../lib/m4sugar/m4sh.m4:639: AS_IF is expanded from...
-../../lib/autoconf/headers.m4:129: _AC_CHECK_HEADER_MONGREL is expanded from...
-../../lib/autoconf/headers.m4:67: AC_CHECK_HEADER is expanded from...
+You should run autoupdate.], [../autoconf-2.71/lib/autoconf/general.m4:2920: AC_TRY_LINK is expanded from...
+../autoconf-2.71/lib/m4sugar/m4sh.m4:692: _AS_IF_ELSE is expanded from...
+../autoconf-2.71/lib/m4sugar/m4sh.m4:699: AS_IF is expanded from...
+../autoconf-2.71/lib/autoconf/general.m4:2249: AC_CACHE_VAL is expanded from...
+../autoconf-2.71/lib/autoconf/general.m4:2270: AC_CACHE_CHECK is expanded from...
+../autoconf-2.71/lib/m4sugar/m4sh.m4:699: AS_IF is expanded from...
+../autoconf-2.71/lib/autoconf/headers.m4:89: _AC_CHECK_HEADER_COMPILE is expanded from...
+../autoconf-2.71/lib/autoconf/headers.m4:56: AC_CHECK_HEADER is expanded from...
 aclocal.m4:172: GLIB_WITH_NLS is expanded from...
 aclocal.m4:388: GLIB_GNU_GETTEXT is expanded from...
 aclocal.m4:488: AM_GLIB_GNU_GETTEXT is expanded from...
 configure.ac:23: the top level])
 m4trace:configure.ac:23: -1- _m4_warn([obsolete], [The macro `AC_TRY_LINK' is obsolete.
-You should run autoupdate.], [../../lib/autoconf/general.m4:2698: AC_TRY_LINK is expanded from...
-../../lib/m4sugar/m4sh.m4:639: AS_IF is expanded from...
-../../lib/autoconf/general.m4:2042: AC_CACHE_VAL is expanded from...
-../../lib/autoconf/general.m4:2063: AC_CACHE_CHECK is expanded from...
-../../lib/m4sugar/m4sh.m4:639: AS_IF is expanded from...
-../../lib/autoconf/headers.m4:129: _AC_CHECK_HEADER_MONGREL is expanded from...
-../../lib/autoconf/headers.m4:67: AC_CHECK_HEADER is expanded from...
+You should run autoupdate.], [../autoconf-2.71/lib/autoconf/general.m4:2920: AC_TRY_LINK is expanded from...
+../autoconf-2.71/lib/m4sugar/m4sh.m4:692: _AS_IF_ELSE is expanded from...
+../autoconf-2.71/lib/m4sugar/m4sh.m4:699: AS_IF is expanded from...
+../autoconf-2.71/lib/autoconf/general.m4:2249: AC_CACHE_VAL is expanded from...
+../autoconf-2.71/lib/autoconf/general.m4:2270: AC_CACHE_CHECK is expanded from...
+../autoconf-2.71/lib/m4sugar/m4sh.m4:699: AS_IF is expanded from...
+../autoconf-2.71/lib/autoconf/headers.m4:89: _AC_CHECK_HEADER_COMPILE is expanded from...
+../autoconf-2.71/lib/autoconf/headers.m4:56: AC_CHECK_HEADER is expanded from...
 aclocal.m4:172: GLIB_WITH_NLS is expanded from...
 aclocal.m4:388: GLIB_GNU_GETTEXT is expanded from...
 aclocal.m4:488: AM_GLIB_GNU_GETTEXT is expanded from...
@@ -640,10 +505,10 @@ m4trace:configure.ac:23: -1- AC_SUBST([XGETTEXT])
 m4trace:configure.ac:23: -1- AC_SUBST_TRACE([XGETTEXT])
 m4trace:configure.ac:23: -1- m4_pattern_allow([^XGETTEXT$])
 m4trace:configure.ac:23: -1- _m4_warn([obsolete], [The macro `AC_TRY_LINK' is obsolete.
-You should run autoupdate.], [../../lib/autoconf/general.m4:2698: AC_TRY_LINK is expanded from...
-../../lib/m4sugar/m4sh.m4:639: AS_IF is expanded from...
-../../lib/autoconf/headers.m4:129: _AC_CHECK_HEADER_MONGREL is expanded from...
-../../lib/autoconf/headers.m4:67: AC_CHECK_HEADER is expanded from...
+You should run autoupdate.], [../autoconf-2.71/lib/autoconf/general.m4:2920: AC_TRY_LINK is expanded from...
+../autoconf-2.71/lib/m4sugar/m4sh.m4:699: AS_IF is expanded from...
+../autoconf-2.71/lib/autoconf/headers.m4:89: _AC_CHECK_HEADER_COMPILE is expanded from...
+../autoconf-2.71/lib/autoconf/headers.m4:56: AC_CHECK_HEADER is expanded from...
 aclocal.m4:172: GLIB_WITH_NLS is expanded from...
 aclocal.m4:388: GLIB_GNU_GETTEXT is expanded from...
 aclocal.m4:488: AM_GLIB_GNU_GETTEXT is expanded from...
@@ -653,7 +518,7 @@ m4trace:configure.ac:23: -1- m4_pattern_allow([^ENABLE_NLS$])
 m4trace:configure.ac:23: -1- AH_OUTPUT([ENABLE_NLS], [/* always defined to indicate that i18n is enabled */
 @%:@undef ENABLE_NLS])
 m4trace:configure.ac:23: -1- _m4_warn([obsolete], [The macro `AC_OUTPUT_COMMANDS' is obsolete.
-You should run autoupdate.], [../../lib/autoconf/status.m4:1026: AC_OUTPUT_COMMANDS is expanded from...
+You should run autoupdate.], [../autoconf-2.71/lib/autoconf/status.m4:1025: AC_OUTPUT_COMMANDS is expanded from...
 aclocal.m4:172: GLIB_WITH_NLS is expanded from...
 aclocal.m4:388: GLIB_GNU_GETTEXT is expanded from...
 aclocal.m4:488: AM_GLIB_GNU_GETTEXT is expanded from...
@@ -758,12 +623,22 @@ m4trace:configure.ac:52: -1- m4_pattern_allow([^DLLTOOL$])
 m4trace:configure.ac:52: -1- AC_SUBST([OBJDUMP])
 m4trace:configure.ac:52: -1- AC_SUBST_TRACE([OBJDUMP])
 m4trace:configure.ac:52: -1- m4_pattern_allow([^OBJDUMP$])
+m4trace:configure.ac:52: -1- AC_DEFINE_TRACE_LITERAL([LT_MINGW_STATIC_TESTSUITE_HACK])
+m4trace:configure.ac:52: -1- m4_pattern_allow([^LT_MINGW_STATIC_TESTSUITE_HACK$])
+m4trace:configure.ac:52: -1- AH_OUTPUT([LT_MINGW_STATIC_TESTSUITE_HACK], [/* Define if running the test suite so that test @%:@27 works on MinGW. */
+@%:@undef LT_MINGW_STATIC_TESTSUITE_HACK])
 m4trace:configure.ac:52: -1- AC_SUBST([LIBTOOL])
 m4trace:configure.ac:52: -1- AC_SUBST_TRACE([LIBTOOL])
 m4trace:configure.ac:52: -1- m4_pattern_allow([^LIBTOOL$])
 m4trace:configure.ac:52: -1- AC_SUBST([SED])
 m4trace:configure.ac:52: -1- AC_SUBST_TRACE([SED])
 m4trace:configure.ac:52: -1- m4_pattern_allow([^SED$])
+m4trace:configure.ac:52: -1- AC_SUBST([GREP])
+m4trace:configure.ac:52: -1- AC_SUBST_TRACE([GREP])
+m4trace:configure.ac:52: -1- m4_pattern_allow([^GREP$])
+m4trace:configure.ac:52: -1- AC_SUBST([EGREP])
+m4trace:configure.ac:52: -1- AC_SUBST_TRACE([EGREP])
+m4trace:configure.ac:52: -1- m4_pattern_allow([^EGREP$])
 m4trace:configure.ac:52: -1- AC_SUBST([FGREP])
 m4trace:configure.ac:52: -1- AC_SUBST_TRACE([FGREP])
 m4trace:configure.ac:52: -1- m4_pattern_allow([^FGREP$])
@@ -917,32 +792,30 @@ Makefile
 src/Makefile
 po/Makefile.in
 ])
-m4trace:configure.ac:79: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
-You should run autoupdate.], [])
-m4trace:configure.ac:79: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:79: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:79: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:79: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:79: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:79: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:79: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:79: -1- AC_SUBST([am__EXEEXT_TRUE])
-m4trace:configure.ac:79: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
-m4trace:configure.ac:79: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:79: -1- AC_SUBST([am__EXEEXT_FALSE])
-m4trace:configure.ac:79: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
-m4trace:configure.ac:79: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:79: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:79: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:79: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:79: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:79: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:79: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:79: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:79: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:79: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:79: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:79: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:79: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:79: -1- AC_SUBST_TRACE([MKDIR_P])
-m4trace:configure.ac:79: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
+m4trace:configure.ac:84: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:84: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:84: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:84: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:84: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:84: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:84: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:84: -1- AC_SUBST([am__EXEEXT_TRUE])
+m4trace:configure.ac:84: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
+m4trace:configure.ac:84: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:84: -1- AC_SUBST([am__EXEEXT_FALSE])
+m4trace:configure.ac:84: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
+m4trace:configure.ac:84: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:84: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:84: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:84: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:84: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:84: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:84: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:84: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:84: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:84: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:84: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:84: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:84: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:84: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:84: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
