--- a/autom4te.cache/traces.2
+++ b/autom4te.cache/traces.2
@@ -1,6 +1,6 @@
-m4trace:aclocal.m4:10547: -1- AC_SUBST([am__quote])
-m4trace:aclocal.m4:10547: -1- AC_SUBST_TRACE([am__quote])
-m4trace:aclocal.m4:10547: -1- m4_pattern_allow([^am__quote$])
+m4trace:aclocal.m4:10549: -1- AC_SUBST([am__quote])
+m4trace:aclocal.m4:10549: -1- AC_SUBST_TRACE([am__quote])
+m4trace:aclocal.m4:10549: -1- m4_pattern_allow([^am__quote$])
 m4trace:configure.ac:4: -1- AC_INIT([growbook], [0.1.4])
 m4trace:configure.ac:4: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:4: -1- m4_pattern_forbid([_AC_])
@@ -341,8 +341,8 @@ m4trace:configure.ac:22: -1- m4_pattern_allow([^GETTEXT_PACKAGE$])
 m4trace:configure.ac:22: -1- AH_OUTPUT([GETTEXT_PACKAGE], [/* GETTEXT package name */
 @%:@undef GETTEXT_PACKAGE])
 m4trace:configure.ac:23: -1- _m4_warn([obsolete], [The macro `GLIB_GNU_GETTEXT' is obsolete.
-You should run autoupdate.], [aclocal.m4:388: GLIB_GNU_GETTEXT is expanded from...
-aclocal.m4:488: AM_GLIB_GNU_GETTEXT is expanded from...
+You should run autoupdate.], [aclocal.m4:9425: GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:9525: AM_GLIB_GNU_GETTEXT is expanded from...
 configure.ac:23: the top level])
 m4trace:configure.ac:23: -1- AC_SUBST([CC])
 m4trace:configure.ac:23: -1- AC_SUBST_TRACE([CC])
@@ -426,9 +426,9 @@ You should run autoupdate.], [../autoconf-2.71/lib/autoconf/general.m4:2920: AC_
 ../autoconf-2.71/lib/m4sugar/m4sh.m4:699: AS_IF is expanded from...
 ../autoconf-2.71/lib/autoconf/general.m4:2249: AC_CACHE_VAL is expanded from...
 ../autoconf-2.71/lib/autoconf/general.m4:2270: AC_CACHE_CHECK is expanded from...
-aclocal.m4:73: GLIB_LC_MESSAGES is expanded from...
-aclocal.m4:388: GLIB_GNU_GETTEXT is expanded from...
-aclocal.m4:488: AM_GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:9110: GLIB_LC_MESSAGES is expanded from...
+aclocal.m4:9425: GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:9525: AM_GLIB_GNU_GETTEXT is expanded from...
 configure.ac:23: the top level])
 m4trace:configure.ac:23: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LC_MESSAGES])
 m4trace:configure.ac:23: -1- m4_pattern_allow([^HAVE_LC_MESSAGES$])
@@ -459,9 +459,9 @@ You should run autoupdate.], [../autoconf-2.71/lib/autoconf/general.m4:2920: AC_
 ../autoconf-2.71/lib/m4sugar/m4sh.m4:699: AS_IF is expanded from...
 ../autoconf-2.71/lib/autoconf/headers.m4:89: _AC_CHECK_HEADER_COMPILE is expanded from...
 ../autoconf-2.71/lib/autoconf/headers.m4:56: AC_CHECK_HEADER is expanded from...
-aclocal.m4:172: GLIB_WITH_NLS is expanded from...
-aclocal.m4:388: GLIB_GNU_GETTEXT is expanded from...
-aclocal.m4:488: AM_GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:9209: GLIB_WITH_NLS is expanded from...
+aclocal.m4:9425: GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:9525: AM_GLIB_GNU_GETTEXT is expanded from...
 configure.ac:23: the top level])
 m4trace:configure.ac:23: -1- _m4_warn([obsolete], [The macro `AC_TRY_LINK' is obsolete.
 You should run autoupdate.], [../autoconf-2.71/lib/autoconf/general.m4:2920: AC_TRY_LINK is expanded from...
@@ -472,9 +472,9 @@ You should run autoupdate.], [../autoconf-2.71/lib/autoconf/general.m4:2920: AC_
 ../autoconf-2.71/lib/m4sugar/m4sh.m4:699: AS_IF is expanded from...
 ../autoconf-2.71/lib/autoconf/headers.m4:89: _AC_CHECK_HEADER_COMPILE is expanded from...
 ../autoconf-2.71/lib/autoconf/headers.m4:56: AC_CHECK_HEADER is expanded from...
-aclocal.m4:172: GLIB_WITH_NLS is expanded from...
-aclocal.m4:388: GLIB_GNU_GETTEXT is expanded from...
-aclocal.m4:488: AM_GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:9209: GLIB_WITH_NLS is expanded from...
+aclocal.m4:9425: GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:9525: AM_GLIB_GNU_GETTEXT is expanded from...
 configure.ac:23: the top level])
 m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_BIND_TEXTDOMAIN_CODESET], [/* Define to 1 if you have the `bind_textdomain_codeset\' function. */
 @%:@undef HAVE_BIND_TEXTDOMAIN_CODESET])
@@ -509,9 +509,9 @@ You should run autoupdate.], [../autoconf-2.71/lib/autoconf/general.m4:2920: AC_
 ../autoconf-2.71/lib/m4sugar/m4sh.m4:699: AS_IF is expanded from...
 ../autoconf-2.71/lib/autoconf/headers.m4:89: _AC_CHECK_HEADER_COMPILE is expanded from...
 ../autoconf-2.71/lib/autoconf/headers.m4:56: AC_CHECK_HEADER is expanded from...
-aclocal.m4:172: GLIB_WITH_NLS is expanded from...
-aclocal.m4:388: GLIB_GNU_GETTEXT is expanded from...
-aclocal.m4:488: AM_GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:9209: GLIB_WITH_NLS is expanded from...
+aclocal.m4:9425: GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:9525: AM_GLIB_GNU_GETTEXT is expanded from...
 configure.ac:23: the top level])
 m4trace:configure.ac:23: -1- AC_DEFINE_TRACE_LITERAL([ENABLE_NLS])
 m4trace:configure.ac:23: -1- m4_pattern_allow([^ENABLE_NLS$])
@@ -519,9 +519,9 @@ m4trace:configure.ac:23: -1- AH_OUTPUT([ENABLE_NLS], [/* always defined to indic
 @%:@undef ENABLE_NLS])
 m4trace:configure.ac:23: -1- _m4_warn([obsolete], [The macro `AC_OUTPUT_COMMANDS' is obsolete.
 You should run autoupdate.], [../autoconf-2.71/lib/autoconf/status.m4:1025: AC_OUTPUT_COMMANDS is expanded from...
-aclocal.m4:172: GLIB_WITH_NLS is expanded from...
-aclocal.m4:388: GLIB_GNU_GETTEXT is expanded from...
-aclocal.m4:488: AM_GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:9209: GLIB_WITH_NLS is expanded from...
+aclocal.m4:9425: GLIB_GNU_GETTEXT is expanded from...
+aclocal.m4:9525: AM_GLIB_GNU_GETTEXT is expanded from...
 configure.ac:23: the top level])
 m4trace:configure.ac:23: -1- AC_SUBST([CATALOGS])
 m4trace:configure.ac:23: -1- AC_SUBST_TRACE([CATALOGS])
@@ -623,10 +623,6 @@ m4trace:configure.ac:52: -1- m4_pattern_allow([^DLLTOOL$])
 m4trace:configure.ac:52: -1- AC_SUBST([OBJDUMP])
 m4trace:configure.ac:52: -1- AC_SUBST_TRACE([OBJDUMP])
 m4trace:configure.ac:52: -1- m4_pattern_allow([^OBJDUMP$])
-m4trace:configure.ac:52: -1- AC_DEFINE_TRACE_LITERAL([LT_MINGW_STATIC_TESTSUITE_HACK])
-m4trace:configure.ac:52: -1- m4_pattern_allow([^LT_MINGW_STATIC_TESTSUITE_HACK$])
-m4trace:configure.ac:52: -1- AH_OUTPUT([LT_MINGW_STATIC_TESTSUITE_HACK], [/* Define if running the test suite so that test @%:@27 works on MinGW. */
-@%:@undef LT_MINGW_STATIC_TESTSUITE_HACK])
 m4trace:configure.ac:52: -1- AC_SUBST([LIBTOOL])
 m4trace:configure.ac:52: -1- AC_SUBST_TRACE([LIBTOOL])
 m4trace:configure.ac:52: -1- m4_pattern_allow([^LIBTOOL$])
@@ -734,88 +730,77 @@ m4trace:configure.ac:52: -1- m4_pattern_allow([^LD$])
 m4trace:configure.ac:52: -1- AC_SUBST([LT_SYS_LIBRARY_PATH])
 m4trace:configure.ac:52: -1- AC_SUBST_TRACE([LT_SYS_LIBRARY_PATH])
 m4trace:configure.ac:52: -1- m4_pattern_allow([^LT_SYS_LIBRARY_PATH$])
-m4trace:configure.ac:58: -1- m4_pattern_forbid([^_?PKG_[A-Z_]+$])
-m4trace:configure.ac:58: -1- m4_pattern_allow([^PKG_CONFIG(_(PATH|LIBDIR|SYSROOT_DIR|ALLOW_SYSTEM_(CFLAGS|LIBS)))?$])
-m4trace:configure.ac:58: -1- m4_pattern_allow([^PKG_CONFIG_(DISABLE_UNINSTALLED|TOP_BUILD_DIR|DEBUG_SPEW)$])
-m4trace:configure.ac:58: -1- AC_SUBST([PKG_CONFIG])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([PKG_CONFIG])
-m4trace:configure.ac:58: -1- m4_pattern_allow([^PKG_CONFIG$])
-m4trace:configure.ac:58: -1- AC_SUBST([PKG_CONFIG_PATH])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([PKG_CONFIG_PATH])
-m4trace:configure.ac:58: -1- m4_pattern_allow([^PKG_CONFIG_PATH$])
-m4trace:configure.ac:58: -1- AC_SUBST([PKG_CONFIG_LIBDIR])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([PKG_CONFIG_LIBDIR])
-m4trace:configure.ac:58: -1- m4_pattern_allow([^PKG_CONFIG_LIBDIR$])
-m4trace:configure.ac:58: -1- AC_SUBST([PKG_CONFIG])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([PKG_CONFIG])
-m4trace:configure.ac:58: -1- m4_pattern_allow([^PKG_CONFIG$])
-m4trace:configure.ac:58: -1- AC_SUBST([GROWBOOK_CFLAGS])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([GROWBOOK_CFLAGS])
-m4trace:configure.ac:58: -1- m4_pattern_allow([^GROWBOOK_CFLAGS$])
-m4trace:configure.ac:58: -1- AC_SUBST([GROWBOOK_LIBS])
-m4trace:configure.ac:58: -1- AC_SUBST_TRACE([GROWBOOK_LIBS])
-m4trace:configure.ac:58: -1- m4_pattern_allow([^GROWBOOK_LIBS$])
-m4trace:configure.ac:59: -1- AC_DEFINE_TRACE_LITERAL([HAVE_SQLITE3_H])
-m4trace:configure.ac:59: -1- m4_pattern_allow([^HAVE_SQLITE3_H$])
-m4trace:configure.ac:59: -1- AH_OUTPUT([HAVE_SQLITE3_H], [/* define 1 if we have sqlite3 */
-@%:@undef HAVE_SQLITE3_H])
-m4trace:configure.ac:62: -1- AH_OUTPUT([HAVE_LIBSQLITE3], [/* Define to 1 if you have the `sqlite3\' library (-lsqlite3). */
-@%:@undef HAVE_LIBSQLITE3])
-m4trace:configure.ac:62: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBSQLITE3])
-m4trace:configure.ac:62: -1- m4_pattern_allow([^HAVE_LIBSQLITE3$])
-m4trace:configure.ac:65: -1- AH_OUTPUT([HAVE_LIBSQLITE3], [/* Define to 1 if you have the `sqlite3\' library (-lsqlite3). */
-@%:@undef HAVE_LIBSQLITE3])
-m4trace:configure.ac:65: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBSQLITE3])
-m4trace:configure.ac:65: -1- m4_pattern_allow([^HAVE_LIBSQLITE3$])
-m4trace:configure.ac:70: -2- AC_DEFINE_TRACE_LITERAL([HAVE_LIBPQ])
-m4trace:configure.ac:70: -2- m4_pattern_allow([^HAVE_LIBPQ$])
-m4trace:configure.ac:70: -2- AH_OUTPUT([HAVE_LIBPQ], [/* define 1 if we have libpq (PostgreSQL) installed. */
+m4trace:configure.ac:60: -1- m4_pattern_forbid([^_?PKG_[A-Z_]+$])
+m4trace:configure.ac:60: -1- m4_pattern_allow([^PKG_CONFIG(_(PATH|LIBDIR|SYSROOT_DIR|ALLOW_SYSTEM_(CFLAGS|LIBS)))?$])
+m4trace:configure.ac:60: -1- m4_pattern_allow([^PKG_CONFIG_(DISABLE_UNINSTALLED|TOP_BUILD_DIR|DEBUG_SPEW)$])
+m4trace:configure.ac:60: -1- AC_SUBST([PKG_CONFIG])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([PKG_CONFIG])
+m4trace:configure.ac:60: -1- m4_pattern_allow([^PKG_CONFIG$])
+m4trace:configure.ac:60: -1- AC_SUBST([PKG_CONFIG_PATH])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([PKG_CONFIG_PATH])
+m4trace:configure.ac:60: -1- m4_pattern_allow([^PKG_CONFIG_PATH$])
+m4trace:configure.ac:60: -1- AC_SUBST([PKG_CONFIG_LIBDIR])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([PKG_CONFIG_LIBDIR])
+m4trace:configure.ac:60: -1- m4_pattern_allow([^PKG_CONFIG_LIBDIR$])
+m4trace:configure.ac:60: -1- AC_SUBST([PKG_CONFIG])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([PKG_CONFIG])
+m4trace:configure.ac:60: -1- m4_pattern_allow([^PKG_CONFIG$])
+m4trace:configure.ac:60: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBPQ])
+m4trace:configure.ac:60: -1- m4_pattern_allow([^HAVE_LIBPQ$])
+m4trace:configure.ac:60: -1- AH_OUTPUT([HAVE_LIBPQ], [/* define 1 if we have libpq installed */
 @%:@undef HAVE_LIBPQ])
-m4trace:configure.ac:69: -1- AC_SUBST([PGSQL_CFLAGS])
-m4trace:configure.ac:69: -1- AC_SUBST_TRACE([PGSQL_CFLAGS])
-m4trace:configure.ac:69: -1- m4_pattern_allow([^PGSQL_CFLAGS$])
-m4trace:configure.ac:69: -1- AC_SUBST([PGSQL_LIBS])
-m4trace:configure.ac:69: -1- AC_SUBST_TRACE([PGSQL_LIBS])
-m4trace:configure.ac:69: -1- m4_pattern_allow([^PGSQL_LIBS$])
-m4trace:configure.ac:76: -2- AC_DEFINE_TRACE_LITERAL([HAVE_MARIADB])
-m4trace:configure.ac:76: -2- m4_pattern_allow([^HAVE_MARIADB$])
-m4trace:configure.ac:76: -2- AH_OUTPUT([HAVE_MARIADB], [/* define 1 if we have MariaDB client installed. */
+m4trace:configure.ac:65: -1- AC_DEFINE_TRACE_LITERAL([HAVE_MARIADB])
+m4trace:configure.ac:65: -1- m4_pattern_allow([^HAVE_MARIADB$])
+m4trace:configure.ac:65: -1- AH_OUTPUT([HAVE_MARIADB], [/* define 1 if we have MariaDB client installed DEPENDS="@S|@DEPENDS libmariadb"
+   */
 @%:@undef HAVE_MARIADB])
-m4trace:configure.ac:75: -1- AC_SUBST([MARIADB_CFLAGS])
-m4trace:configure.ac:75: -1- AC_SUBST_TRACE([MARIADB_CFLAGS])
-m4trace:configure.ac:75: -1- m4_pattern_allow([^MARIADB_CFLAGS$])
-m4trace:configure.ac:75: -1- AC_SUBST([MARIADB_LIBS])
-m4trace:configure.ac:75: -1- AC_SUBST_TRACE([MARIADB_LIBS])
-m4trace:configure.ac:75: -1- m4_pattern_allow([^MARIADB_LIBS$])
-m4trace:configure.ac:79: -1- AC_CONFIG_FILES([
+m4trace:configure.ac:71: -1- AC_SUBST([GROWBOOK_CFLAGS])
+m4trace:configure.ac:71: -1- AC_SUBST_TRACE([GROWBOOK_CFLAGS])
+m4trace:configure.ac:71: -1- m4_pattern_allow([^GROWBOOK_CFLAGS$])
+m4trace:configure.ac:71: -1- AC_SUBST([GROWBOOK_LIBS])
+m4trace:configure.ac:71: -1- AC_SUBST_TRACE([GROWBOOK_LIBS])
+m4trace:configure.ac:71: -1- m4_pattern_allow([^GROWBOOK_LIBS$])
+m4trace:configure.ac:72: -1- AC_DEFINE_TRACE_LITERAL([HAVE_SQLITE3_H])
+m4trace:configure.ac:72: -1- m4_pattern_allow([^HAVE_SQLITE3_H$])
+m4trace:configure.ac:72: -1- AH_OUTPUT([HAVE_SQLITE3_H], [/* define 1 if we have sqlite3 */
+@%:@undef HAVE_SQLITE3_H])
+m4trace:configure.ac:75: -1- AH_OUTPUT([HAVE_LIBSQLITE3], [/* Define to 1 if you have the `sqlite3\' library (-lsqlite3). */
+@%:@undef HAVE_LIBSQLITE3])
+m4trace:configure.ac:75: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBSQLITE3])
+m4trace:configure.ac:75: -1- m4_pattern_allow([^HAVE_LIBSQLITE3$])
+m4trace:configure.ac:78: -1- AH_OUTPUT([HAVE_LIBSQLITE3], [/* Define to 1 if you have the `sqlite3\' library (-lsqlite3). */
+@%:@undef HAVE_LIBSQLITE3])
+m4trace:configure.ac:78: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBSQLITE3])
+m4trace:configure.ac:78: -1- m4_pattern_allow([^HAVE_LIBSQLITE3$])
+m4trace:configure.ac:80: -1- AC_CONFIG_FILES([
 Makefile
 src/Makefile
 po/Makefile.in
 ])
-m4trace:configure.ac:84: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:84: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:84: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:84: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:84: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:84: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:84: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:84: -1- AC_SUBST([am__EXEEXT_TRUE])
-m4trace:configure.ac:84: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
-m4trace:configure.ac:84: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:84: -1- AC_SUBST([am__EXEEXT_FALSE])
-m4trace:configure.ac:84: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
-m4trace:configure.ac:84: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:84: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:84: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:84: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:84: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:84: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:84: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:84: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:84: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:84: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:84: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:84: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:84: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:84: -1- AC_SUBST_TRACE([MKDIR_P])
-m4trace:configure.ac:84: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
+m4trace:configure.ac:85: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:85: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:85: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:85: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:85: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:85: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:85: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:85: -1- AC_SUBST([am__EXEEXT_TRUE])
+m4trace:configure.ac:85: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
+m4trace:configure.ac:85: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:85: -1- AC_SUBST([am__EXEEXT_FALSE])
+m4trace:configure.ac:85: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
+m4trace:configure.ac:85: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:85: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:85: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:85: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:85: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:85: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:85: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:85: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:85: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:85: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:85: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:85: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:85: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:85: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:85: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
